--- a/src/js/app/views/decks-list/_decks-list.scss
+++ b/src/js/app/views/decks-list/_decks-list.scss
@@ -7,7 +7,6 @@
     font-size: $dialog-title-font-size !important;
   }
   .separator{
-    //$separator-height : $button-height + ($button-padding * 2);
     width: 100%;
     border-bottom: solid 1px $header-border-color;
     margin: $button-padding 0;
@@ -17,12 +16,12 @@
       height: $button-height;
     }
     tr{
-      height: 46px;
+      height: 46 * $px;
       padding: 0;
     }
   }
   .deck {
-    margin: 10px 0;
+    margin: 10 * $px 0;
     
     .button{
       margin: 0;
