--- a/src/js/app/views/select-file/_select-file.scss
+++ b/src/js/app/views/select-file/_select-file.scss
@@ -6,12 +6,12 @@
 		height: 100%;
 		.content {
 			position: absolute;
-			top: 100px;
+			top: 100 * $px;
 			bottom: 0;
 			left: 0;
 			right: 0;
 			.content-container {
-				$commands-height: 85px;
+				$commands-height: 85 * $px;
 				position: relative;
 				width: 100%;
 				height: 100%;
@@ -35,22 +35,22 @@
 		.marker {
 			float: left;
 			font-family: FontAwesome;
-			padding-top: 5px;
+			padding-top: 5 * $px;
 			width: $dialog-button-checkbox-height;
 		}
 		.current-dir {
-			padding-left: 20px;
+			padding-left: 20 * $px;
 			font-size: $dialog-line-font-size;
 			.value {
 				display: inline-block;
-				padding-left: 20px;
+				padding-left: 20 * $px;
 			}
 			
 		}
 		.dir, .file{
 			text-align: left;
 			.value {
-				padding-left: 5px;
+				padding-left: 5 * $px;
 				@include overflow-ellipses();
 			}
 		}
