fixed card-view style removed dead dependency

--- a/src/js/app/views/card-view/_card-view.scss
+++ b/src/js/app/views/card-view/_card-view.scss
@@ -22,6 +22,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    overflow: hidden;
     .selected{
       position: absolute;
       left: $header-padding;
